FullQa New/src/objects/PBP_Event__c.object
<CustomObject>
    <description>Used to track Avalara SAM specific KPI&apos;s associated with a given (partner) account record</description>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>(Deprecated) Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Emails/newsletter/social media</fullName>
                </value>
                <value>
                    <fullName>Nexus Tool</fullName>
                </value>
                <value>
                    <fullName>Outbound Calls</fullName>
                </value>
                <value>
                    <fullName>Partner Trainings</fullName>
                </value>
                <value>
                    <fullName>Partner Visits</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
                <value>
                    <fullName>Tradeshow</fullName>
                </value>
                <value>
                    <fullName>User Groups/Forums</fullName>
                </value>
                <value>
                    <fullName>Webinars</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actual_Bookings__c</fullName>
        <formula>Campaign__r.TotalBookedValue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Bookings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Deals__c</fullName>
        <formula>Campaign__r.DingCount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Deals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Leads__c</fullName>
        <formula>Campaign__r.NumberOfLeads</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Opps__c</fullName>
        <formula>Campaign__r.NumberOfOpportunities</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Opps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Area__c</fullName>
        <label>Business Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Ecomm</fullName>
                </value>
                <value>
                    <fullName>Emerging ERP</fullName>
                </value>
                <value>
                    <fullName>ERP</fullName>
                </value>
                <value>
                    <fullName>VSB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDM_Campaign_Name__c</fullName>
        <formula>&quot;SAM&quot; +  Text(YEAR( Event_Date__c )) + CASE(MONTH(  Event_Date__c ), 
1, &quot;Q1&quot; , 
2, &quot;Q1&quot;, 
3, &quot;Q1&quot;, 
4, &quot;Q2&quot;, 
5, &quot;Q2&quot;, 
6, &quot;Q2&quot;, 
7, &quot;Q3&quot;, 
8, &quot;Q3&quot;, 
9, &quot;Q3&quot;, 
10, &quot;Q4&quot;, 
11, &quot;Q4&quot;, 
12, &quot;Q4&quot;, 
&quot;None&quot;) + CASE(MONTH( Event_Date__c ), 
1, &quot;01&quot;, 
2, &quot;02&quot;, 
3, &quot;03&quot;, 
4, &quot;04&quot;, 
5, &quot;05&quot;, 
6, &quot;06&quot;, 
7, &quot;07&quot;, 
8, &quot;08&quot;, 
9, &quot;09&quot;, 
10, &quot;10&quot;, 
11, &quot;11&quot;, 
12, &quot;12&quot;, 
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CDM Campaign Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDM__c</fullName>
        <formula>PBP_Sales_Marketing_Plan__r.CDM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CDM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Create_Name__c</fullName>
        <formula>Partner_Account_Name_Text__c + &quot;-&quot; + TEXT( Event_Type__c ) + &quot; &quot; + CASE(MONTH( Event_Date__c ), 
1, &quot;Jan&quot;, 
2, &quot;Feb&quot;, 
3, &quot;Mar&quot;, 
4, &quot;Apr&quot;, 
5, &quot;May&quot;, 
6, &quot;Jun&quot;, 
7, &quot;Jul&quot;, 
8, &quot;Aug&quot;, 
9, &quot;Sep&quot;, 
10, &quot;Oct&quot;, 
11, &quot;Nov&quot;, 
12, &quot;Dec&quot;, 
&quot;None&quot;) 
+ &quot; &quot; + TEXT(YEAR( Event_Date__c ))</formula>
        <label>Campaign Create Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Exists__c</fullName>
        <formula>IF(ISNULL(Campaign__c), FALSE, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Exists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Marketing_Manager__c</fullName>
        <label>Campaign Marketing Manager</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alison Paisley</fullName>
                </value>
                <value>
                    <fullName>Courtney McFarlane</fullName>
                </value>
                <value>
                    <fullName>Elle Heinen</fullName>
                </value>
                <value>
                    <fullName>Mark Carpenter</fullName>
                </value>
                <value>
                    <fullName>Meguire Heston</fullName>
                </value>
                <value>
                    <fullName>Patti Passinault</fullName>
                </value>
                <value>
                    <fullName>Robin Conner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>PBP Events</relationshipLabel>
        <relationshipName>PBP_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CaseSafeID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PBP Event CaseSafeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in flow to generate campaigns for PBP Events</description>
        <inlineHelpText>Uncheck if you do not want to create a campaign related to this event.</inlineHelpText>
        <label>Create Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_from_Year_Start__c</fullName>
        <formula>Today() - DATE(2015,1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days from Year Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Month_Year__c</fullName>
        <formula>CASE(MONTH( Event_Date__c ), 
1, &quot;Jan&quot;, 
2, &quot;Feb&quot;, 
3, &quot;Mar&quot;, 
4, &quot;Apr&quot;, 
5, &quot;May&quot;, 
6, &quot;Jun&quot;, 
7, &quot;Jul&quot;, 
8, &quot;Aug&quot;, 
9, &quot;Sep&quot;, 
10, &quot;Oct&quot;, 
11, &quot;Nov&quot;, 
12, &quot;Dec&quot;, 
&quot;None&quot;) 
+ &quot; &quot; + TEXT(YEAR( Event_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Month/Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Status1__c</fullName>
        <formula>Text(Campaign__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <label>Event Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Subtype__c</fullName>
        <label>Event Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1099</fullName>
                </value>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Blue Cherry</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Certs / Returns</fullName>
                </value>
                <value>
                    <fullName>Ecommerce</fullName>
                </value>
                <value>
                    <fullName>Epicor</fullName>
                </value>
                <value>
                    <fullName>Exact</fullName>
                </value>
                <value>
                    <fullName>Infor</fullName>
                </value>
                <value>
                    <fullName>Intacct</fullName>
                </value>
                <value>
                    <fullName>Matrix Master</fullName>
                </value>
                <value>
                    <fullName>Mcommerce</fullName>
                </value>
                <value>
                    <fullName>Microsoft</fullName>
                </value>
                <value>
                    <fullName>NetSuite</fullName>
                </value>
                <value>
                    <fullName>Open Systems</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Payroll</fullName>
                </value>
                <value>
                    <fullName>Peachtree</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>ProStores</fullName>
                </value>
                <value>
                    <fullName>QAD</fullName>
                </value>
                <value>
                    <fullName>QuickBooks</fullName>
                </value>
                <value>
                    <fullName>Sage</fullName>
                </value>
                <value>
                    <fullName>SDK</fullName>
                </value>
                <value>
                    <fullName>Solutions Partner</fullName>
                </value>
                <value>
                    <fullName>SYSPRO</fullName>
                </value>
                <value>
                    <fullName>Workday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advertisement (AD)</fullName>
                </value>
                <value>
                    <fullName>Asset - 3rd Party (EA)</fullName>
                </value>
                <value>
                    <fullName>Asset - Internal (EA)</fullName>
                </value>
                <value>
                    <fullName>Banner Ads (BA)</fullName>
                </value>
                <value>
                    <fullName>Corporate Sponsored Event (CSE)</fullName>
                </value>
                <value>
                    <fullName>Direct Mail (DM)</fullName>
                </value>
                <value>
                    <fullName>Emergency Service Notice (CE)</fullName>
                </value>
                <value>
                    <fullName>Event (CN)</fullName>
                </value>
                <value>
                    <fullName>Free Rates (FR)</fullName>
                </value>
                <value>
                    <fullName>Free Trial (FT)</fullName>
                </value>
                <value>
                    <fullName>Nexus Tool (NT)</fullName>
                </value>
                <value>
                    <fullName>Online Advertisement</fullName>
                </value>
                <value>
                    <fullName>Organic (OR)</fullName>
                </value>
                <value>
                    <fullName>Other (OT)</fullName>
                </value>
                <value>
                    <fullName>Outbound Call (OC)</fullName>
                </value>
                <value>
                    <fullName>Partner Event (PE)</fullName>
                </value>
                <value>
                    <fullName>Partner Training (PT)</fullName>
                </value>
                <value>
                    <fullName>Partner Visits (PV)</fullName>
                </value>
                <value>
                    <fullName>PPC (PC)</fullName>
                </value>
                <value>
                    <fullName>Promotion (CP)</fullName>
                </value>
                <value>
                    <fullName>Promotional Email (PE)</fullName>
                </value>
                <value>
                    <fullName>Public Relations (PR)</fullName>
                </value>
                <value>
                    <fullName>Referral Program (RP)</fullName>
                </value>
                <value>
                    <fullName>Regular Service Notice (CR)</fullName>
                </value>
                <value>
                    <fullName>RoadShow (RS)</fullName>
                </value>
                <value>
                    <fullName>Social (SC)</fullName>
                </value>
                <value>
                    <fullName>Survey (SV)</fullName>
                </value>
                <value>
                    <fullName>Tradeshow (TS)</fullName>
                </value>
                <value>
                    <fullName>User Group</fullName>
                </value>
                <value>
                    <fullName>Webinar (CW)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_ASP__c</fullName>
        <defaultValue>10000</defaultValue>
        <label>Expected ASP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Bookings__c</fullName>
        <label>Expected Bookings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Deals_Calc__c</fullName>
        <formula>Expected_Opps_Calc__c * 0.23</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Deals Calc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Deals__c</fullName>
        <label>Expected Deals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Leads__c</fullName>
        <label>Expected Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Opps_Calc__c</fullName>
        <formula>Expected_Leads__c * 0.27</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Opps Calc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Opps__c</fullName>
        <label>Expected Opps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>List_Size__c</fullName>
        <label>List Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketing_Manager_Name__c</fullName>
        <formula>Marketing_Manager__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Partner Management: Need Marketing manager field to be a lookup to user.</description>
        <label>Marketing Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PBP_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PBP_Sales_Marketing_Plan__c</fullName>
        <label>(PBP) Sales &amp; Marketing Plan</label>
        <referenceTo>Performance__c</referenceTo>
        <relationshipLabel>PBP Events</relationshipLabel>
        <relationshipName>PBP_Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Partner_Account_Name_Text__c</fullName>
        <formula>PBP_Sales_Marketing_Plan__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <formula>PBP_Sales_Marketing_Plan__r.Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Account</label>
        <type>Text</type>
    </fields>
    <label>PBP Event</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PBPE{0000}</displayFormat>
        <label>PBP Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PBP Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>